sass installed and set up

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -50,7 +50,8 @@
 
 .main code {
   font-family: inherit;
-  background: var(--gray-alpha-100);
+  background: var(
+  --gray-alpha-100);
   padding: 2px 4px;
   border-radius: 4px;
   font-weight: 600;
@@ -160,6 +161,6 @@ a.secondary {
 
 @media (prefers-color-scheme: dark) {
   .logo {
-    filter: invert();
+    filter: invert(100%);
   }
 }
