--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -16,6 +16,7 @@
 
 html,
 body {
+  font-size: 62.5%;
   max-width: 100vw;
   overflow-x: hidden;
 }
@@ -38,6 +39,12 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+ul {
+  list-style: none;
+}
+
+
 
 @media (prefers-color-scheme: dark) {
   html {
