photo adde to home section

--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -44,6 +44,11 @@ ul {
   list-style: none;
 }
 
+.container {
+  margin: 1rem 5rem;
+  padding: 2rem;
+}
+
 
 
 @media (prefers-color-scheme: dark) {
