portifolio structured build

--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -1,5 +1,10 @@
-@import 'styles/navbar';   // Import _nav.scss
-
+@import 'styles/navbar';
+@import 'styles/home';
+@import 'styles/project';
+@import 'styles/about';   // Import _nav.scss
+@import 'styles/skills';
+@import 'styles/contact';
+@import 'styles/footer';
 
 
 :root {
