about me section added

--- a/src/app/styles/_project.scss
+++ b/src/app/styles/_project.scss
@@ -1,8 +1,6 @@
 .project {
 
-  &__header {
-    font-size: 3.6rem;
-  }
+
 
   &__box {
     display: flex;
@@ -26,7 +24,11 @@
 
   // Header
   &__header {
-    font-size: 1.6rem;
+    font-size: 3.6rem;
+  }
+
+  &__title {
+    font-size: 2.4rem;
   }
 
   &__text {
