--- a/src/app/styles/_navbar.scss
+++ b/src/app/styles/_navbar.scss
@@ -1,10 +1,20 @@
+@import "variables";
+
 .navbar {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 1rem;
+  padding: 2rem 5rem;
   font-size: 1.5rem;
+  font-weight: bold;
+  background-color: #e0bcee;
 
+  // Fix navbar
+  position:fixed;
+  top:0;
+  left:0;
+  right:0;
+  margin:  auto;
 
 
   &__container {
