--- a/src/app/styles/_skills.scss
+++ b/src/app/styles/_skills.scss
@@ -1,3 +1,42 @@
+@import 'variables';
 .skills {
-  
+  display: flex;
+  flex-direction: column;
+  background-color: $cta-color;
+  color: $third-color;
+  font-weight: bold;
+  &__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem; // Ensure the content is stacked vertically
+  }
+
+  &__box, .certifications {
+    display: flex;
+    flex-direction: row; // Display items in a row
+    flex-wrap: wrap; // Allow items to wrap to the next line if they overflow
+    gap: 16px; // Adjust the gap between items as needed
+  }
+
+
+}
+
+.skill{
+  &__text {
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  }
+}
+
+.skill-item, .certification-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%; // Ensure the items take up the full width of their container
+
 }
