home section desktopV finished

--- a/src/app/styles/_home.scss
+++ b/src/app/styles/_home.scss
@@ -6,21 +6,43 @@
 
   // Headers
   &__header--primary {
-    font-size: 4.8rem;
+    font-size: 3.8rem;
+    text-shadow: 1px 1px 1px $border-color;
   }
 
   &__header--secondary {
     font-size: 3.6rem;
-    padding: 2.4rem;
+    text-shadow: 1px 1px 1px $border-color;
+
   }
 
   &__header--terciary {
     font-size: 2.4rem;
+    text-shadow: 1px 1px 1px $border-color;
   }
-  // Left
-  &__left {
-    text-align: center;
+
+
+  &__cta {
+    width: 20rem;
+    display: flex;
+    justify-content: center;
+    margin-top: 3.4rem;
+    padding: 1rem 2rem;
+   border-radius: 1.5rem;
+    background-color: $cta-color;
+    font-size: 2.4rem;
+    box-shadow: 10px 15px 5px 0 $secondary-color;
+    transition: ease-in-out 0.5s;
+    &:hover {
+      background-color: $secondary-color;
+      box-shadow: none;
+    }
   }
+
+  &__btn {
+    color: $section-color;
+  }
+
 
   // Call for action
   // ADD call for action here
