--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -7,3 +7,6 @@ $section-color: #F6F6F6; // for section background
 $icons-color: #33CC99; // for icons
 $highlight-color: #FF7F66; // for highlights
 $border-color: #839AB4;
+
+
+// font size 1:48px 2:36px 3:24px
