--- a/src/app/styles/_project.scss
+++ b/src/app/styles/_project.scss
@@ -17,12 +17,55 @@
     text-align: center;
     align-items: center;
     margin: 1.8rem;
-    max-width: 300px;
+    max-width: 35rem;
     gap: 1rem;
-    border: 1px solid black;
+    border: 2px solid black;
     overflow: hidden;
+    background-color: $main-color;
     box-shadow: 10px 15px 5px 0 $secondary-color;
     border-radius: 1.5rem;
+    text-shadow: 1px 1px 1px $border-color;
+    transition: ease-in-out 0.5s;
+    &:hover {
+
+      box-shadow: none;
+    }
+  }
+
+  &__links {
+    margin: 1.8rem 0;
+    margin: 1.8rem 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    gap: 1rem;
+    /* justify-content: space-evenly; */
+
+  }
+
+  &__link {
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    padding: 0.5rem 1rem;
+
+    // Design
+    color: $section-color;
+    background-color: $cta-color;
+    border: 1px solid $border-color;
+    border-radius: 1.5rem;
+    font-weight: bold;
+    transition: ease-in-out 0.5s;
+
+    &:hover {
+      background-color: $secondary-color;
+      box-shadow: 10px 10px 5px 0 $secondary-color;
+    }
+  }
+
+  span {
+    font-size: 1.2rem;
+    padding: 1rem;
   }
 
   // Header
@@ -43,3 +86,25 @@
     padding: 1rem 2rem;
   }
 }
+
+
+// &__cta {
+//   width: 20rem;
+//   display: flex;
+//   justify-content: center;
+//   margin-top: 3.4rem;
+//   padding: 1rem 2rem;
+//  border-radius: 1.5rem;
+//   background-color: $cta-color;
+//   font-size: 2.4rem;
+//   box-shadow: 10px 1510 5px 0 $secondary-color;
+//   transition: ease-in-out 0.5s;
+//   &:hover {
+//     background-color: $secondary-color;
+//     box-shadow: none;
+//   }
+// }
+
+// &__btn {
+//   color: $section-color;
+// }
