contact section finished

--- a/src/app/styles/_skills.scss
+++ b/src/app/styles/_skills.scss
@@ -73,13 +73,15 @@
   }
 }
 
-.certifications {
-  display: flex;
+// Add this section when you have all the certifications 
 
-  &__header {
-    font-size: 2.4rem;
-    color: $section-color;
-    text-shadow: $third-color;
-    margin-top: 2rem;
-  }
-}
+// .certifications {
+//   display: flex;
+
+//   &__header {
+//     font-size: 2.4rem;
+//     color: $section-color;
+//     text-shadow: $third-color;
+//     margin-top: 2rem;
+//   }
+// }
