--- a/src/app/styles/_contact.scss
+++ b/src/app/styles/_contact.scss
@@ -98,3 +98,16 @@
     }
   }
 }
+
+
+// Responsive design
+
+@media screen and (max-width: 1200px) {
+  .contact {
+    &__img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+}
