--- a/src/app/styles/_home.scss
+++ b/src/app/styles/_home.scss
@@ -50,7 +50,20 @@
     align-items: center;
 
     &__img {
-      width: 100%;
+      width: 90%;
+    }
+
+    &__header--primary {
+      font-size: 3.6rem;
+    }
+
+    &__header--secondary {
+      font-size: 2.4rem;
+
+    }
+
+    &__header--terciary {
+      font-size: 1.8rem;
     }
   }
 
