--- a/src/app/styles/_skills.scss
+++ b/src/app/styles/_skills.scss
@@ -76,9 +76,7 @@
 
 @media screen and (max-width: 1200px) {
 
-    .skills__content{
-       // Center align text and icons
-    }
+
 
     .skills__box {
       gap: 1rem;  // Adjust spacing between elements
@@ -97,6 +95,64 @@
       text-align: center;  // Center text within each skill box
     }
 
+}
+
+@media screen and (max-width: 850px) {
+
+
+
+  .skills__box {
+    gap: 1rem;  // Adjust spacing between elements
+  }
+
+  .skill__content {
+    width: 100%;  // Make each skill content take full width
+    max-width: 15rem;  // Restrict max width so it doesn't stretch too much
+    margin: 0.5rem 0;
+    display: flex;
+    flex-direction: row;  // Stack items vertically
+    align-items: center;  // Add vertical space between items
+  }
+
+  .skill__text {
+    text-align: center;  // Center text within each skill box
+  }
+}
+
+@media screen and (max-width: 770px) {
+  .skill__text{
+    padding: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 415px) {
+  .skill__text{
+    padding: 0.5rem;
+  }
+
+  .skills__logo{
+    width: 1rem;
+    height: 1rem;
+  }
+}
+
+@media screen and (max-width: 325px) {
+  .skill__text{
+    padding: 0.5rem;
+  }
+
+  .skill__logo{
+    width: 5rem;
+    height: 5rem;
+  }
+
+  .skill__content {
+    width: 100%;  // Make each skill content take full width
+    max-width: 10rem;
+     // Restrict max width so it doesn't stretch too much
+    // margin: 0.3rem 0;
+    // Add vertical space between items
+  }
 }
 
 // Add this section when you have all the certifications
