finish about me responsiviness

--- a/src/app/styles/_about.scss
+++ b/src/app/styles/_about.scss
@@ -6,7 +6,7 @@
 
 &__box {
   display: flex;
-
+  // flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 
@@ -47,15 +47,37 @@
 @media screen and (max-width:1200px) {
   .about {
     &__img  {
-      width: 80%;
+      margin: 3rem 0;
+      width: 100%;
     }
 
     &__text {
-      font-size: 1.6rem;
       line-height: 1.6;
       color: $section-color;
       padding: 1.2rem;
       font-weight: 500;
     }
   }
+}
+
+@media screen and (max-width:768px) {
+  .about {
+    &__box {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    &__line {
+      width: 100%;
+    }
+
+    &__header {
+      font-size: 2.4rem;
+   
+    }
+
+
+  }
+
 }
