--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -101,6 +101,17 @@ ul {
 
   .container {
     padding: 0;
-    margin: 0;
+    margin: 1rem 2rem;
   }
+}
+
+
+@media screen and (max-width: 375px) {
+
+
+  .container {
+
+    padding: 0;
+  }
+
 }
