--- a/src/app/styles/_contact.scss
+++ b/src/app/styles/_contact.scss
@@ -20,11 +20,7 @@
     margin: 0 auto;
 
     &__img {
-      position: relative;
-      width: 50%;
-      height: 30rem;
-      overflow: hidden;
-      border-radius: 1rem;
+      width: 100%;
     }
 
     &__inputs {
@@ -106,8 +102,20 @@
   .contact {
     &__img {
       width: 100%;
-      height: 100%;
+
     }
   }
 
 }
+
+@media screen and (max-width: 1024px) {
+  .contact {
+    &__img {
+      width: 80%;
+    }
+
+    form {
+      margin: 24rem 0;
+    }
+  }
+  }
